--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body  >
+    
         <div class="header" > <button  onclick="goToHome()" style="background: transparent; border: none;" > <img src="HomeButton.png"  alt="home"> </button>  </div>
 
     <div id="home-page">
@@ -20,6 +21,11 @@
     <label class="image-radio">
         <input type="radio" name="card-type" value="animal" >
         <img src="lion.png" alt="Animal Cards" />
+        <!-- <span>Animal Cards</span> -->
+    </label>
+    <label class="image-radio">
+        <input type="radio" name="card-type" value="bird" >
+        <img src="bird.png" alt="Bird Cards" />
         <!-- <span>Animal Cards</span> -->
     </label>
     
